# murmureWABAA

./: CHANGELOG.md  CONTRIBUTING.md  eslint.config.js  pnpm-lock.yaml
.github/workflows/: build-macos-intel.yml  build-macos.yml  build-windows.yml  release.yml
browser-extension/: README.md
browser-extension/chrome/: background.js  manifest.json  popup.css  popup.html  popup.js
browser-extension/firefox/: background.js  manifest.json  popup.js
docs/: BETA_TESTING_EN.md  BETA_TESTING_FR.md
src/: router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/audio/: audio.rs  pipeline.rs
src-tauri/src/commands/: context.rs  llm.rs  mod.rs  model.rs  stt.rs
src-tauri/src/context_detection/: browser_state.rs  context_detection.rs  integration.rs  mapping.rs  mod.rs  platform_linux.rs  platform_macos.rs  platform_windows.rs  types.rs
src-tauri/src/dictionary/: dictionary.rs  types.rs
src-tauri/src/history/: history.rs
src-tauri/src/http_api/: server.rs  types.rs
src-tauri/src/llm/: helpers.rs  llm.rs  mod.rs  types.rs
src-tauri/src/llm/providers/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  traits.rs
src-tauri/src/model/: download.rs  mod.rs  types.rs
src-tauri/src/overlay/: tray.rs
src-tauri/src/settings/: types.rs
src-tauri/src/shortcuts/: shortcuts.rs
src-tauri/src/stt/: mod.rs  router.rs  settings.rs  types.rs
src-tauri/src/stt/providers/: gemini.rs  google_cloud.rs  groq.rs  mod.rs  openai.rs  traits.rs
src/components/: number-input.tsx  status-bar.tsx  tabs.tsx
src/features/home/: home.tsx
src/features/home/model-indicator/: model-indicator.tsx
src/features/layout/: layout.tsx
src/features/layout/app-sidebar/: app-sidebar.tsx
src/features/llm-connect/: llm-connect.constants.ts  llm-connect.tsx
src/features/llm-connect/components/: context-rules-tab.tsx  llm-advanced-settings.tsx  mode-content.tsx  mode-tabs.tsx  provider-config-form.tsx  provider-selector.tsx
src/features/llm-connect/hooks/: use-llm-connect.ts
src/features/llm-connect/onboarding/: llm-connect-onboarding.tsx
src/features/model-setup/: model-setup-layout.tsx  model-setup.tsx
src/features/model-setup/components/: setup-complete.tsx  setup-mode-selection.tsx  setup-model-info.tsx  setup-online-provider.tsx
src/features/settings/stt/: stt-settings.tsx
src/i18n/: config.ts
src/i18n/locales/: fr.json
src/overlay/: overlay.tsx
(+16 files in other folders)
